--- a/app/src/main/res/drawable/turn_to_map_btn.xml
+++ b/app/src/main/res/drawable/turn_to_map_btn.xml
@@ -3,6 +3,6 @@
     <corners
         android:radius="10dp" />
     <solid
-        android:color="#666666"/>
+        android:color="@color/login_btn"/>
 
 </shape>
