--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,21 +90,20 @@
             android:layout_height="wrap_content"
             android:text="@string/new_user_register"
             android:layout_marginRight="20dp"
-            android:textColor="@color/login_new_user"
+            android:textColor="@color/login_btn"
             />
         <TextView
             android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:background="@color/login_forget_pwd"
+            android:background="@color/login_btn"
             android:layout_marginRight="20dp"
             android:layout_gravity="center"/>
         <TextView
             android:id="@+id/login_forget_pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/login_forget_pwd"
-            android:text="@string/forget_pwd"
-            />
+            android:textColor="@color/login_btn"
+            android:text="@string/forget_pwd" />
     </LinearLayout>
     <include layout="@layout/progress_bar"/>
 </RelativeLayout>
