--- a/app/src/main/res/layout/collect_fragment_adapter.xml
+++ b/app/src/main/res/layout/collect_fragment_adapter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -64,7 +65,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#e6e6e6"
+                android:background="#7ff0f0f0"
                 android:layout_margin="5dp"
                 android:padding="5dp"
                 android:orientation="vertical">
@@ -137,15 +138,17 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="3dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="#404040"
                             android:text="@string/principal"/>
                         <TextView
                             android:id="@+id/user_smoke_mark_principal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="#404040"
                             android:text="王老五"/>
                     </LinearLayout>
 
@@ -154,15 +157,16 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dp">
-                        <ImageView
+                        android:layout_marginTop="3dp">
+                        <TextView
                             android:id="@+id/user_smoke_mark_phone_image"
                             android:layout_width="wrap_content"
-                            android:layout_height="15dp"
-                            android:src="@drawable/yg_phone" />
+                            android:layout_height="wrap_content"
+                            android:textColor="#404040"
+                            android:text="电话:"/>
                         <TextView
                             android:id="@+id/user_smoke_mark_phone_tv"
-                            android:textColor="#000000"
+                            android:textColor="#404040"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="12548454848"/>
@@ -177,33 +181,34 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="3dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/principal"/>
+                            android:text="@string/principal"
+                            android:textColor="#404040"/>
                         <TextView
                             android:id="@+id/user_smoke_mark_principal_two"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="王老五"/>
+                            android:text="王老五"
+                            android:textColor="#404040"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/user_phone_lin_two"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="10dp">
-                        <ImageView
+                        android:layout_marginTop="3dp">
+                        <TextView
                             android:id="@+id/user_smoke_mark_phone_image_two"
                             android:layout_width="wrap_content"
-                            android:layout_height="15dp"
-                            android:src="@drawable/yg_phone" />
+                            android:layout_height="wrap_content"
+                            android:text="电话:"
+                            android:textColor="#404040"/>
                         <TextView
                             android:id="@+id/user_smoke_mark_phone_tv_two"
-                            android:textColor="#000000"
+                            android:textColor="#404040"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="12548454848"/>
@@ -216,20 +221,22 @@
                 <TextView
                     android:id="@+id/makesure_text"
                     android:text="上报"
-                    android:layout_width="40dp"
-                    android:layout_height="25dp"
-                    android:layout_margin="10dp"
-                    android:textSize="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textSize="12sp"
+                    android:padding="5dp"
                     android:textColor="#6573f9"
                     android:gravity="center"
                     android:background="@drawable/dev_list_item_shape"/>
 
                 <TextView
                     android:id="@+id/deal_alarm_action_tv"
-                    android:layout_width="60dp"
-                    android:layout_height="25dp"
-                    android:layout_margin="10dp"
-                    android:textSize="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textSize="12sp"
+                    android:padding="5dp"
                     android:textColor="#6573f9"
                     android:gravity="center"
                     android:background="@drawable/dev_list_item_shape"
@@ -237,10 +244,11 @@
                     android:visibility="visible"/>
                 <TextView
                     android:id="@+id/action_now_tv"
-                    android:layout_width="60dp"
-                    android:layout_height="25dp"
-                    android:layout_margin="10dp"
-                    android:textSize="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textSize="12sp"
+                    android:padding="5dp"
                     android:textColor="#6573f9"
                     android:gravity="center"
                     android:background="@drawable/dev_list_item_shape"
@@ -249,11 +257,5 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#dadada"/>
 
 </LinearLayout>
