--- a/app/src/main/res/layout/message_main_notice_list.xml
+++ b/app/src/main/res/layout/message_main_notice_list.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_margin="5dp"
         android:background="@drawable/bisuo"
         android:layout_centerHorizontal="true"></ImageView>
@@ -19,9 +19,10 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:layout_below="@id/iv_image"
         android:layout_centerHorizontal="true"
-        android:text="BIBIA"></TextView>
+        android:text="BIBIA"
+        android:layout_marginBottom="20dp"></TextView>
 
 </RelativeLayout>
