--- a/app/src/main/res/layout/activity_call_manager_dialog.xml
+++ b/app/src/main/res/layout/activity_call_manager_dialog.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@color/white">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="设备负责人信息"
         android:padding="5dp"
