--- a/app/src/main/res/drawable/home_alarm_light.xml
+++ b/app/src/main/res/drawable/home_alarm_light.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@drawable/shouye_baojing1" android:duration="150"></item>
-    <item android:drawable="@drawable/shouye_baojing2" android:duration="150"></item>
+    <item android:drawable="@drawable/shouye_alarm" android:duration="150"></item>
+    <item android:drawable="@drawable/shouye_alarm_1" android:duration="150"></item>
+
 </animation-list>
