--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -6,7 +6,7 @@
         android:id="@+id/title_rela"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/lead_regiater"
+        android:background="@color/colorPrimary"
         >
         <TextView
             android:id="@+id/power_change_history_text"
