--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -31,25 +31,17 @@
             android:layout_alignParentRight="true"
             android:layout_margin="10dp" />
 
-        <RelativeLayout
-            android:id="@+id/check_layout_animator"
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:layout_margin="0dp"
-            android:layout_centerHorizontal="true"
-            >
 
             <com.smart.cloud.fire.ui.view.CircleProgressBar
                 android:id="@+id/circleProgressBar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 lh2:circleWidth="12dp"
                 lh2:firstColor="#3B4278"
                 lh2:secondColor="#3B95C8" />
-        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/sum_line"
@@ -61,7 +53,7 @@
             android:layout_marginRight="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_below="@id/check_layout_animator">
+            android:layout_below="@id/circleProgressBar">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -186,15 +178,15 @@
             android:background="@drawable/home_alarm_history_shape">
             <ImageView
                 android:id="@+id/home_alarm_light"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_margin="10dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/home_alarm_light"/>
             <ImageView
                 android:id="@+id/jiantou"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="5dp"
